added old preprint

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         <td style="padding:20px;width:75%;vertical-align:middle">
           <span class="papertitle">3D Mapping using IMU and 2D LiDAR</span>
           <p>
-            In this paper, we fuse data from an Inertial Measurement Unit (IMU) and a 2D Light Detection and Ranging (LiDAR) with the help of an Extended Kalman Filter (EKF) for producing a 3D map of an indoor environment. The IMU is mounted on top of the 2D-LiDAR, and this system is attached to the tilt bracket of the Pan-Tilt-Unit (PTU). Point cloud registration algorithms such as Iterative Closest Point (ICP) and Normal Distribution Transform (NDT) are used to estimate the pose using the current and the previous point cloud transformation. Due to certain drawbacks of the ICP and NDT registration algorithms, an optimized version that combines both two algorithms is used for the pose estimation of the setup.
+            In this paper, we fuse data from an Inertial Measurement Unit (IMU) 
+            and a 2D Light Detection and Ranging (LiDAR) with the help of an Extended Kalman Filter (EKF) 
+            for producing a 3D map of an indoor environment. 
           </p>
           <a href="https://www.techrxiv.org/doi/full/10.36227/techrxiv.23731134.v1">techrxiv</a>
         </td>
