added old preprint

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 
-      <td style="padding:20px;width:25%;vertical-align:left">
+      <td style="padding:16px;width:20%;vertical-align:middle">
         <div class="one">
           <img src='images/dynamics-learning.png' width=100%>
         </div>
       </td>
 
-      <td style="padding:20px;width:75%;vertical-align:left">
+      <td style="padding:8;width:80%;vertical-align:middle">
         <span class="papertitle">Dynamics Models in the Aggressive Off-Road Driving Regime</span>
         <br>
         <span class = "authors"> </span>
@@ -74,13 +74,13 @@
       </td>
 
 
-        <td style="padding:20px;width:25%;vertical-align:left">
+        <td style="padding:16px;width:20%;vertical-align:middle">
           <div class="one">
             <img src='images/LiDAR-camera-fusion.png' width=100%>
           </div>
         </td>
         
-        <td style="padding:20px;width:75%;vertical-align:left">
+        <td style="padding:8px;width:80%;vertical-align:middle">
           <span class="papertitle">3D Mapping using IMU and 2D LiDAR</span>
           <p>
             In this paper, we fuse data from an Inertial Measurement Unit (IMU) 
