--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <tr>
         <td style="padding:16px;width:20%;vertical-align:middle">
           <div class="one">
-            <img src='images/LiDAR-camera-fusion.png' width=100%>
+            <img src='images/LiDAR-camera-fusion.png' width=150% height="150%">
           </div>
         </td>
         
