--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       
-      <h2>Latest work</h2>
+      <tr>
+          <td style="padding:16px;width:100%;vertical-align:top;">
+              <h2 style="text-align:left;">Latest work</h2>
+          </td>
+      </tr>
 
       <tr>
         <td style="padding:16px;width:20%;vertical-align:middle">
@@ -94,7 +98,11 @@
       </td>
     </tr>
 
-    <h2>Old work</h2>
+    <tr>
+      <td style="padding:16px;width:100%;vertical-align:top;">
+          <h2 style="text-align:left;">Old work (2017-2020)</h2>
+      </td>
+  </tr>
 
     <tr>
       <td style="padding:16px;width:20%;vertical-align:middle">
