Added embedded project

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <a href="https://arxiv.org/pdf/2009.08033">arXiv</a>
       </td>
     </tr>
-    
+
 
     <tr>
       <td style="padding:16px;width:20%;vertical-align:middle">
@@ -166,7 +166,7 @@
       </td>
       
       <td style="padding:8px;width:80%;vertical-align:middle">
-        <span class="projecttitle">Building a custom pan-tilt-zoom setup supporting object detection and tracking</span>
+        <span class="paperttitle">Building a custom pan-tilt-zoom setup supporting object detection and tracking</span>
       </td>
     </tr>
 
