Added embedded project

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </td>
       
       <td style="padding:8px;width:80%;vertical-align:middle">
-        <span class="paperttitle">Building a custom pan-tilt-zoom setup supporting object detection and tracking</span>
+        <span class="papertitle">Building a custom pan-tilt-zoom setup supporting object detection and tracking</span>
       </td>
     </tr>
 
