--- a/index.html
+++ b/index.html
@@ -166,7 +166,12 @@
       </td>
       
       <td style="padding:8px;width:80%;vertical-align:middle">
-        <span class="papertitle">Building a custom pan-tilt-zoom setup supporting object detection and tracking</span>
+        <span class="papertitle">Custom PTZ for tinyML</span>
+        <p>
+          This project is about building a custom pan-tilt-zoom setup supporting object detection and tracking.
+          Able to recognize objects by training a model using the X-Cube AI library. Tracking of the objects
+          is done using Lucas-Kanade optical flow.
+          </p>
       </td>
     </tr>
 
