--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
       </td>
     </tr>
 
+    <tr>
+      <td style="padding:16px;width:20%;vertical-align:middle">
+        <div class="one">
+          <img src='images/hrl-minigrid.png' width=100% height="100%">
+        </div>
+      </td>
+      
+      <td style="padding:8px;width:80%;vertical-align:middle">
+        <span class="papertitle">Hierarchical Reinforcement Learning in tabular settings</span>
+        <p>
+          Purpose of this project is to develop a 
+          hierarchical reinforcement learning framework using the MiniGrid environment. 
+          This involves training a high level planner and a low level policy to effectively navigate to a goal while solving challenges like unlocking doors with keys.
+        </p>
+      </td>
+    </tr>
+
     <!-- OLD WORK      -->
 
     <tr>
