curtailed exo project info

--- a/index.html
+++ b/index.html
@@ -166,9 +166,8 @@
         <span class = "authors">Rutvik Naik</span>,
         <span class = "authors">S S Pachpore</span>,
         <p>
-          This paper intends to introduce a voice-controlled upper body exoskeleton for industrial applications which can aid workers wearing it by reducing stresses on their arms and shoulders over longer periods and add up to 20kg more strength in lifting applications. 
-          The 3D design, calculations and considerations, and load analysis are presented along with brief results of a basic prototype model of the exoskeleton. 
-          Arduino voice recognition module is used. Commands are limited to pick and drop only. 
+          This paper is about designing an upper body exoskeleton and utilizing a arduino supported voice recognition module
+          for translating commands into desired actuations. 
           </p>
         <a href="https://arxiv.org/pdf/2009.08033">arXiv</a>
       </td>
